--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # Installer logs
 pip-log.txt
@@ -52,3 +53,5 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
+# Mac
+.DS_Store
