--- a/tox.ini
+++ b/tox.ini
@@ -1,30 +1,55 @@
 [tox]
 envlist =
-    py26, py26-dj14, py27, py27-dj14, py32
+    py26, py26-dj14, py26-dj15, py27, py27-dj14, py27-dj15, py32, py32-dj15, , py33, py33-dj15
 
 [testenv]
 commands =
     python setup.py test
+    python setup.py test_demo
 
 [testenv:py26]
 deps =
-    django==1.5
+    django==1.6
 
 [testenv:py26-dj14]
 basepython = python2.6
 deps =
     django==1.4
 
-[testenv:py27]
+[testenv:py26-dj15]
+basepython = python2.6
 deps =
     django==1.5
+
+[testenv:py27]
+deps =
+    django==1.6
     six==1.5.2
 
 [testenv:py27-dj14]
 basepython = python2.7
 deps =
     django==1.4
+    six==1.5.2
+
+[testenv:py27-dj15]
+basepython = python2.7
+deps =
+    django==1.5
+    six==1.5.2
 
 [testenv:py32]
+deps =
+    django==1.6
+
+[testenv:py32-dj15]
+deps =
+    django==1.5
+
+[testenv:py33]
+deps =
+    django==1.6
+
+[testenv:py33-dj15]
 deps =
     django==1.5
