unittest2 fallback for py2.6

--- a/tox.ini
+++ b/tox.ini
@@ -10,16 +10,19 @@ commands =
 [testenv:py26]
 deps =
     django==1.6
+    unittest2
 
 [testenv:py26-dj14]
 basepython = python2.6
 deps =
     django==1.4.2
+    unittest2
 
 [testenv:py26-dj15]
 basepython = python2.6
 deps =
     django==1.5
+    unittest2
 
 [testenv:py27]
 deps =
