include test files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,16 @@ include README.rst
 include CONTRIBUTORS.txt
 
 recursive-include likert_field/templatetags *.py
-recursive-include tests *.py
+recursive-include test_suite *.py
+recursive-include test_projects *.py
+recursive-include test_projects/django14 *.py
+recursive-include test_projects/django14/django14 *.py
+recursive-include test_projects/django14/global_assets/templates *.html
+recursive-include test_projects/django14/global_assets/templates/app *.html
+recursive-include test_projects/django14/global_assets/templates/theme *.html
+recursive-include test_projects/django14/likert_test_app *.py
+recursive-include test_projects/django14/likert_test_app/static/likert/bootstrap-star-rating *.md *.json
+recursive-include test_projects/django14/likert_test_app/static/likert/bootstrap-star-rating/css *.css
+recursive-include test_projects/django14/likert_test_app/static/likert/bootstrap-star-rating/examples *.html
+recursive-include test_projects/django14/likert_test_app/static/likert/bootstrap-star-rating/js *.js
+recursive-include test_projects/django14/likert_test_app/templates/likert *.html
