--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ deps =
     django==1.6
 
 [testenv:py32-dj15]
+basepython = python3.2
 deps =
     django==1.5
 
@@ -51,5 +52,6 @@ deps =
     django==1.6
 
 [testenv:py33-dj15]
+basepython = python3.3
 deps =
     django==1.5
