--- a/tox.ini
+++ b/tox.ini
@@ -55,3 +55,12 @@ deps =
 basepython = python3.3
 deps =
     django==1.5
+
+[testenv:py34]
+deps =
+    django==1.6
+
+[testenv:py34-dj15]
+basepython = python3.4
+deps =
+    django==1.5
