--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py26, py26-dj14, py26-dj15, py27, py27-dj14, py27-dj15, py32, py32-dj15, py33, py33-dj15, py34, py34-dj15
+    py26, py26-dj14, py26-dj142, py26-dj15, py27, py27-dj14, py27-dj142, py27-dj15, py32, py32-dj15, py33, py33-dj15, py34, py34-dj15
 
 [testenv]
 commands =
@@ -9,10 +9,16 @@ commands =
 
 [testenv:py26]
 deps =
-    django==1.6
+    django==1.6.5
     unittest2
 
 [testenv:py26-dj14]
+basepython = python2.6
+deps =
+    django==1.4.13
+    unittest2
+
+[testenv:py26-dj142]
 basepython = python2.6
 deps =
     django==1.4.2
@@ -21,14 +27,19 @@ deps =
 [testenv:py26-dj15]
 basepython = python2.6
 deps =
-    django==1.5
+    django==1.5.8
     unittest2
 
 [testenv:py27]
 deps =
-    django==1.6
+    django==1.6.5
 
 [testenv:py27-dj14]
+basepython = python2.7
+deps =
+    django==1.4.13
+
+[testenv:py27-dj142]
 basepython = python2.7
 deps =
     django==1.4.2
@@ -36,31 +47,37 @@ deps =
 [testenv:py27-dj15]
 basepython = python2.7
 deps =
-    django==1.5
+    django==1.5.8
 
 [testenv:py32]
 deps =
-    django==1.6
+    django==1.6.5
 
 [testenv:py32-dj15]
 basepython = python3.2
 deps =
-    django==1.5
+    django==1.5.8
 
 [testenv:py33]
 deps =
-    django==1.6
+    django==1.6.5
 
 [testenv:py33-dj15]
 basepython = python3.3
 deps =
-    django==1.5
+    django==1.5.8
 
 [testenv:py34]
 deps =
-    django==1.6
+    django==1.6.5
 
 [testenv:py34-dj15]
 basepython = python3.4
 deps =
-    django==1.5
+    django==1.5.8
+
+[testenv:py27-dj17trunk]
+recreate=True
+basepython = python2.7
+deps =
+    https://github.com/django/django/archive/stable/1.7.x.zip
