--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     py26-dj14, py26-dj14-south, py26-dj16, py26-dj16-south,
-    py27, py27-dj14, py27-dj14-south, py27-dj16, py27-dj16-south,
+    py27, py27-dj14, py27-dj14-south, py27-dj16, py27-dj16-south, py27-dj17,
     py27-djnext,
     py32, py32-dj16,
     py33, py33-dj16, py33-dj16-south,
@@ -16,13 +16,13 @@ commands =
 [testenv:py26-dj14]
 basepython = python2.6
 deps =
-    django==1.4.19
+    django==1.4.20
     unittest2
 
 [testenv:py26-dj14-south]
 basepython = python2.6
 deps =
-    django==1.4.19
+    django==1.4.20
     south==1.0.2
     unittest2
 
@@ -41,17 +41,17 @@ deps =
 
 [testenv:py27]
 deps =
-    django==1.7.5
+    django==1.8.1
 
 [testenv:py27-dj14]
 basepython = python2.7
 deps =
-    django==1.4.19
+    django==1.4.20
 
 [testenv:py27-dj14-south]
 basepython = python2.7
 deps =
-    django==1.4.19
+    django==1.4.20
     south==1.0.2
 
 [testenv:py27-dj16]
@@ -65,6 +65,11 @@ deps =
     django==1.6.10
     south==1.0.2
 
+[testenv:py27-dj17]
+basepython = python2.7
+deps =
+    django==1.7.8
+
 [testenv:py27-djnext]
 recreate=True
 basepython = python2.7
@@ -73,7 +78,7 @@ deps =
 
 [testenv:py32]
 deps =
-    django==1.7.5
+    django==1.7.8
 
 [testenv:py32-dj16]
 basepython = python3.2
@@ -82,7 +87,7 @@ deps =
 
 [testenv:py33]
 deps =
-    django==1.7.5
+    django==1.7.8
 
 [testenv:py33-dj16]
 basepython = python3.3
@@ -97,7 +102,7 @@ deps =
 
 [testenv:py34]
 deps =
-    django==1.7.5
+    django==1.7.8
 
 [testenv:py34-dj16]
 basepython = python3.4
