--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,9 @@ envlist =
     py26-dj14, py26-dj14-south, py26-dj16, py26-dj16-south,
     py27, py27-dj14, py27-dj14-south, py27-dj16, py27-dj16-south, py27-dj17,
     py27-djnext,
-    py32, py32-dj16,
-    py33, py33-dj16, py33-dj16-south,
-    py34, py34-dj16, py34-dj16-south,
+    py32, py32-dj16, py32-dj17,
+    py33, py33-dj16, py33-dj16-south, py33-dj17,
+    py34, py34-dj16, py34-dj16-south, py34-dj17,
     py34-djnext
 
 [testenv]
@@ -29,13 +29,13 @@ deps =
 [testenv:py26-dj16]
 basepython = python2.6
 deps =
-    django==1.6.10
+    django==1.6.11
     unittest2
 
 [testenv:py26-dj16-south]
 basepython = python2.6
 deps =
-    django==1.6.10
+    django==1.6.11
     south==1.0.2
     unittest2
 
@@ -57,12 +57,12 @@ deps =
 [testenv:py27-dj16]
 basepython = python2.7
 deps =
-    django==1.6.10
+    django==1.6.11
 
 [testenv:py27-dj16-south]
 basepython = python2.7
 deps =
-    django==1.6.10
+    django==1.6.11
     south==1.0.2
 
 [testenv:py27-dj17]
@@ -83,7 +83,12 @@ deps =
 [testenv:py32-dj16]
 basepython = python3.2
 deps =
-    django==1.6.10
+    django==1.6.11
+
+[testenv:py32-dj17]
+basepython = python3.2
+deps =
+    django==1.7.8
 
 [testenv:py33]
 deps =
@@ -92,13 +97,18 @@ deps =
 [testenv:py33-dj16]
 basepython = python3.3
 deps =
-    django==1.6.10
+    django==1.6.11
 
 [testenv:py33-dj16-south]
 basepython = python3.3
 deps =
-    django==1.6.10
+    django==1.6.11
     south==1.0.2
+
+[testenv:py33-dj17]
+basepython = python3.3
+deps =
+    django==1.7.8
 
 [testenv:py34]
 deps =
@@ -107,13 +117,18 @@ deps =
 [testenv:py34-dj16]
 basepython = python3.4
 deps =
-    django==1.6.10
+    django==1.6.11
 
 [testenv:py34-dj16-south]
 basepython = python3.4
 deps =
-    django==1.6.10
+    django==1.6.11
     south==1.0.2
+
+[testenv:py34-dj17]
+basepython = python3.4
+deps =
+    django==1.7.8
 
 [testenv:py34-djnext]
 recreate=True
