--- a/tox.ini
+++ b/tox.ini
@@ -1,117 +1,134 @@
 [tox]
 envlist =
-    py26-dj14, py26-dj14-south, py26-dj16, py26-dj16-south,
-    py27, py27-dj14, py27-dj14-south, py27-dj16, py27-dj16-south,
-    py27-djnext,
-    py32, py32-dj16,
-    py33, py33-dj16, py33-dj16-south,
-    py34, py34-dj16, py34-dj16-south,
-    py34-djnext
+    py27, py27-dj14, py27-dj14-south, py27-dj16, py27-dj16-south, py27-dj17,
+    py27-djangomaster,
+    py32, py32-dj16, py32-dj17,
+    py33, py33-dj16, py33-dj16-south, py33-dj17,
+    py34, py34-dj16, py34-dj16-south, py34-dj17,
+    py34-djangomaster
+
+[south]
+deps =
+    south>=1.0
+
+[django1.4]
+deps =
+    Django>=1.4,<1.5
+
+[django1.6]
+deps =
+    Django>=1.6,<1.7
+
+[django1.7]
+deps =
+    Django>=1.7,<1.8
+
+[django1.8]
+deps =
+    Django>=1.8,<1.9
+
+[djangomaster]
+deps =
+    https://github.com/django/django/zipball/master
 
 [testenv]
 commands =
     python setup.py test
     python setup.py test_demo
 
-[testenv:py26-dj14]
-basepython = python2.6
-deps =
-    django==1.4.19
-    unittest2
-
-[testenv:py26-dj14-south]
-basepython = python2.6
-deps =
-    django==1.4.19
-    south==1.0.2
-    unittest2
-
-[testenv:py26-dj16]
-basepython = python2.6
-deps =
-    django==1.6.10
-    unittest2
-
-[testenv:py26-dj16-south]
-basepython = python2.6
-deps =
-    django==1.6.10
-    south==1.0.2
-    unittest2
-
 [testenv:py27]
 deps =
-    django==1.7.5
+    {[django1.8]deps}
 
 [testenv:py27-dj14]
 basepython = python2.7
 deps =
-    django==1.4.19
+    {[django1.4]deps}
 
 [testenv:py27-dj14-south]
 basepython = python2.7
 deps =
-    django==1.4.19
-    south==1.0.2
+    {[django1.4]deps}
+    {[south]deps}
 
 [testenv:py27-dj16]
 basepython = python2.7
 deps =
-    django==1.6.10
+    {[django1.6]deps}
 
 [testenv:py27-dj16-south]
 basepython = python2.7
 deps =
-    django==1.6.10
-    south==1.0.2
+    {[django1.6]deps}
+    {[south]deps}
 
-[testenv:py27-djnext]
+[testenv:py27-dj17]
+basepython = python2.7
+deps =
+    {[django1.7]deps}
+
+[testenv:py27-djangomaster]
 recreate=True
 basepython = python2.7
 deps =
-    https://www.djangoproject.com/download/1.8b1/tarball/
+    {[djangomaster]deps}
 
 [testenv:py32]
 deps =
-    django==1.7.5
+    {[django1.8]deps}
 
 [testenv:py32-dj16]
 basepython = python3.2
 deps =
-    django==1.6.10
+    {[django1.6]deps}
+
+[testenv:py32-dj17]
+basepython = python3.2
+deps =
+    {[django1.7]deps}
 
 [testenv:py33]
 deps =
-    django==1.7.5
+    {[django1.8]deps}
 
 [testenv:py33-dj16]
 basepython = python3.3
 deps =
-    django==1.6.10
+    {[django1.6]deps}
 
 [testenv:py33-dj16-south]
 basepython = python3.3
 deps =
-    django==1.6.10
-    south==1.0.2
+    {[django1.6]deps}
+    {[south]deps}
+
+[testenv:py33-dj17]
+basepython = python3.3
+deps =
+    {[django1.7]deps}
 
 [testenv:py34]
 deps =
-    django==1.7.5
+    {[django1.8]deps}
 
 [testenv:py34-dj16]
 basepython = python3.4
 deps =
-    django==1.6.10
+    {[django1.6]deps}
 
 [testenv:py34-dj16-south]
 basepython = python3.4
 deps =
-    django==1.6.10
-    south==1.0.2
+    {[django1.6]deps}
+    {[south]deps}
 
-[testenv:py34-djnext]
+[testenv:py34-dj17]
+basepython = python3.4
+deps =
+    {[django1.7]deps}
+
+[testenv:py34-djangomaster]
 recreate=True
 basepython = python3.4
 deps =
-    https://www.djangoproject.com/download/1.8b1/tarball/
+    {[djangomaster]deps}
