--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
 envlist =
-    py27, py27-dj14, py27-dj14-south, py27-dj16, py27-dj16-south, py27-dj17,
+    py27-dj14, py27-dj14-south, py27-dj16, py27-dj16-south, py27-dj17, py27-dj18, py27-dj19,
     py27-djangomaster,
-    py32, py32-dj16, py32-dj17,
-    py33, py33-dj16, py33-dj16-south, py33-dj17,
-    py34, py34-dj16, py34-dj16-south, py34-dj17,
-    py34-djangomaster
+    py32-dj16, py32-dj17, py32-dj18,
+    py33-dj16, py33-dj16-south, py33-dj17, py33-dj18,
+    py34-dj16, py34-dj16-south, py34-dj17, py34-dj18, py34-dj19,
+    py35-dj18, py35-dj19,
+    py35-djangomaster
 
 [south]
 deps =
@@ -27,6 +28,10 @@ deps =
 deps =
     Django>=1.8,<1.9
 
+[django1.9]
+deps =
+    Django>=1.9rc1,<2.0
+
 [djangomaster]
 deps =
     https://github.com/django/django/zipball/master
@@ -35,10 +40,6 @@ deps =
 commands =
     python setup.py test
     python setup.py test_demo
-
-[testenv:py27]
-deps =
-    {[django1.8]deps}
 
 [testenv:py27-dj14]
 basepython = python2.7
@@ -67,15 +68,21 @@ basepython = python2.7
 deps =
     {[django1.7]deps}
 
+[testenv:py27-dj18]
+basepython = python2.7
+deps =
+    {[django1.8]deps}
+
+[testenv:py27-dj19]
+basepython = python2.7
+deps =
+    {[django1.9]deps}
+
 [testenv:py27-djangomaster]
 recreate=True
 basepython = python2.7
 deps =
     {[djangomaster]deps}
-
-[testenv:py32]
-deps =
-    {[django1.8]deps}
 
 [testenv:py32-dj16]
 basepython = python3.2
@@ -86,6 +93,11 @@ deps =
 basepython = python3.2
 deps =
     {[django1.7]deps}
+
+[testenv:py32-dj18]
+basepython = python3.2
+deps =
+    {[django1.8]deps}
 
 [testenv:py33]
 deps =
@@ -107,7 +119,8 @@ basepython = python3.3
 deps =
     {[django1.7]deps}
 
-[testenv:py34]
+[testenv:py33-dj18]
+basepython = python3.3
 deps =
     {[django1.8]deps}
 
@@ -127,8 +140,28 @@ basepython = python3.4
 deps =
     {[django1.7]deps}
 
-[testenv:py34-djangomaster]
-recreate=True
+[testenv:py34-dj18]
 basepython = python3.4
+deps =
+    {[django1.8]deps}
+
+[testenv:py34-dj19]
+basepython = python3.4
+deps =
+    {[django1.9]deps}
+
+[testenv:py35-dj18]
+basepython = python3.5
+deps =
+    {[django1.8]deps}
+
+[testenv:py35-dj19]
+basepython = python3.5
+deps =
+    {[django1.9]deps}
+
+[testenv:py35-djangomaster]
+recreate=True
+basepython = python3.5
 deps =
     {[djangomaster]deps}
